# news_module

./: Cargo.toml  README.md  build.rs
docker/: docker-compose.yml
docker/envoy/: Dockerfile  envoy.yaml
docker/news/: Dockerfile
proto/: news.proto
