[package]
name = "toutiao-news"
version = "0.1.0"
authors = ["zhongzc <zhongzc_arch@outlook.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
log = "0.4.0"
env_logger = "0.7.1"
serde = "1.0"
serde_json = "1.0"
futures = "0.3"
mysql = "*"
tonic = "0.2"
prost = "0.6"

[build-dependencies]
tonic-build = "0.2"
